# RuFaS

./: .Rhistory  .buildinfo  .coverage  .coveragerc  .flake8  .gitattributes  .gitignore  .project  .pyre_configuration  .pytype.cfg  033e464d581141e8bfe9f72c61ac8c6b-pulp.mps  033e464d581141e8bfe9f72c61ac8c6b-pulp.sol  10237a9396cb43f9b25d66aa7825f324-pulp.sol  42ab05395bf54a2798e7ad36e4fde0c8-pulp.mps  655cfb4e535e4d30b9ea6c4de155e4eb-pulp.mps  655cfb4e535e4d30b9ea6c4de155e4eb-pulp.sol  7c3c5bc06f1f495ab34d71b7e8408398-pulp.mps  CONTRIBUTING.md  Config.py  Example-animal_management_SA-wrapper.py  FORKING.md  Feed Inputs.csv  Holstein.py  Input.py  Jersey.py  Linear Program.R  Main.py  MissysNewFile  NetMerit_percentile_HO.csv  Pipfile  PullDemo.py  README.md  RUFAS.sublime-workspace  SimController.py  SoilCrop-Tasks-August-2022.md  Weather.py  a62945d5f77242e68fc4f621ca020e74-pulp.mps  a62945d5f77242e68fc4f621ca020e74-pulp.sol  a7404fc35a6247c69fb2b95fdd76a6fe-pulp.mps  analyze_SA.py  (+90 more)
.github/: .coveragerc  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.ipynb_checkpoints/: biomass_graphs-checkpoint.ipynb
DataCollectionApp/: index.html  template
Inputs/: DAYMET_michigan_weather.csv  LAC Columbia WI Weather Data.csv  Sample.MASM  Sample.json  Sample2.json  Weather - Copy.csv  Weather.csv  animal_management.json  bad_length.MASM  bad_parsing_bool.MASM  bad_parsing_int.MASM  barnyard.json  barnyard_weather.csv  barnyard_weather.db  barnyard_weather_N.csv  barnyard_weather_N_years.csv  barnyard_weather_leap_year.csv  crop_module_testWeather.csv  crop_module_testWeather_3.4.csv  crop_module_testWeather_3.4Test.csv  feeds.sqlite  general_mills_high_alfalfa.json  general_mills_high_corn.json  input_w_feedlib.json  ithaca.csv  manure_feed_test.csv  new_feed.json  ration_scenario_1.json  ration_scenario_2.json  ration_scenario_3.json  test.json  test.txt  testing_manure.json  testing_ration_feed.json  testing_ration_feedlib.csv  user_feeds.csv  weather.db
MASM/: .gitignore  classes.py  errors.py  main.py  simulation_engine.py  user_prompt.py  util.py
Outputs/: Soil_Summary.csv
RUFAS/: __init__.py  __main__.py  classes.py  config.py  cross_validator.py  current_day_conditions.py  current_day_weather.py  current_weather.py  data_collection_app_updater.py  data_validator.py  database_reader.py  e2e_test_results_comparer.py  e2e_test_results_handler.py  economy_emission_energy.py  elements.py  end_to_end_test_results_comparer.py  end_to_end_tester.py  enums.py  errors.py  general_constants.py  graph_generator.py  graph_herd_composition.py  input_manager.py  input_validator.py  launching.py  modifiability.py  output_manager.py  report_generator.py  rufas_time.py  scenario_manager.py  schema_generator.py  schema_manager.py  simulation_engine.py  state.py  task_manager.py  time.py  units.py  user_constants.py  user_prompt.py  util.py  (+2 more)
RuFaS.egg-info/: PKG-INFO
SC_redesign/: Functionality-Requirements.html  Functionality-Requirements.md  SC_progress-report-template.md  find-SCredesign-TODOs.sh
SurPhos/: SurPhos.json  SurPhos.py  (+11 more)
(+8346 files in other folders)
