[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RUFAS"
version = "0.9.2"
description = "Ruminant Farm Systems Model"
readme = "README.md"
authors = [
{"name" = "Kristan Foster Reed", "email" = "Kristan.Reed@usda.gov"},
]
requires-python = ">=3.12, <3.14"

[project.urls]
Homepage = "https://rufas.org"
Repository = "https://github.com/RuminantFarmSystems/MASM"

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.mypy]
python_version = "3.12" # Specify the Python version used for type checking (use the lowest target version)
ignore_missing_imports = true # Ignore errors for missing imports
strict_optional = true # Make types for None explicit, requiring optional types to be explicitly annotated
disallow_untyped_defs = true # Disallow defining functions without type annotations
check_untyped_defs = true # Check the bodies of untyped functions, applying type inference where possible
disallow_any_generics = true # Disallow the use of Any as a type unless explicitly declared
disallow_incomplete_defs = true # Require all variables to be explicitly typed
show_column_numbers = true # Show column numbers in error messages
strict = true
exclude = ['^(?!.*(?:RUFAS|tests|main\.py|setup\.py)).*$']
follow_imports = "silent"

[tool.pytest.ini_options]
testpaths = ["tests"]