[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RuFaS"
version = "1.0.0"
description = "Ruminant Farm Systems Model"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
{"name" = "RuFaS Team", "email" = "contact@rufas.org"},
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy==2.2.0",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
    "typing_extensions>=4.12.2",
    "salib==1.5.1",
    "tqdm>=4.67.1",
    "deepdiff>=8.2.0",
    "psutil>=6.1.1",
    "numba>=0.61.0",
]

[project.optional-dependencies]
docs = [
    "sphinx==9.1.0",
    "sphinxawesome-theme>=5.3.2",
]

dev = [
    "black>=25.1.0",
    "flake8>=7.1.1",
    "mypy>=1.15.0",
    "coverage>=7.6.11",
    "pytest==7.4.4",
    "pytest-mock>=3.14.0",
    "pytest-lazy-fixture>=0.6.3",
    "freezegun>=1.5.1",
    "sphinx==9.1.0",
    "sphinxawesome-theme>=5.3.2",
]

[project.urls]
Homepage = "https://rufas.org"
Repository = "https://github.com/RuminantFarmSystems/RuFaS"
Documentation = "https://ruminantfarmsystems.github.io/RuFaS/"

[tool.setuptools]
packages = ["RUFAS"]

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
show_column_numbers = true
strict = true
exclude = ['^(?!.*(?:RUFAS|tests|main\.py|setup\.py)).*$']
follow_imports = "silent"

[tool.pytest.ini_options]
testpaths = ["tests"]